--- a/package.json
+++ b/package.json
@@ -81,15 +81,14 @@
     "axios": "^1.6.7",
     "supertest": "^7.0.0",
     "joi": "^17.12.1",
-    "faker": "^6.6.6",
+    "@faker-js/faker": "^8.0.0",
     "lodash": "^4.17.21",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "axe-core": "^4.8.3",
-    "playwright-axe": "^1.0.0",
-    "regression-js": "^2.0.1",
+    "@axe-core/playwright": "^4.8.3",
     "pixelmatch": "^5.3.0",
     "pngjs": "^7.0.0",
     "csv-parser": "^3.0.0",
@@ -99,8 +98,7 @@
     "crypto-js": "^4.2.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.8",
-    "slack-notify": "^2.0.3",
-    "teams-notify": "^1.0.0",
+    "@slack/webhook": "^6.1.0",
     "webhook-discord": "^3.1.1"
   },
   "husky": {
